--- a/src/components/navbar1/style.css
+++ b/src/components/navbar1/style.css
@@ -1,42 +1,66 @@
 #navRow{
-  /* display: flex;
-  justify-content: space-evenly; */
+ display: flex;
+ align-items: center!important;
+ justify-content: center;
 }
 
-#home {
-  padding-left: 2vw;
-}
-#litzia {
-  font-size: 3vw;
+#litziaImage {
+  height: 6vh;
+  margin-top: 2vh!important;
+  margin-right: 8vw;
 }
 
-.navRightIcons {
-  padding-right: 2vw;
-}
 
 #search {
   display: flex;
   justify-content: center;
-  width: 60vw;
+  width: 55vw;
   align-items: center;
+  margin-left: 3vw;
 }
+
 #searchButton {
-  background-color: transparent;
+  background-color: rgb(51, 51, 51);
   border: none;
-  margin-top: 4%;
-  margin-left: 55%;
+  /* margin-top: 0.1rem; */
+  height: 3.2rem;
+  /* margin-left: 55%; */
   color: rgb(255, 255, 255);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+  border-radius: 0px 8px 8px 0px;
 }
+
 #searchInput {
-  width: 40vw;
+  width: 50vw;
   color: rgb(22, 22, 22);
   background-color: white;
   padding-left: 0.5vw;
   margin-bottom: 0%;
-  margin-top: 2vh;
-  border-radius: 8px;
-  /* margin-left: 10%; */
+  border-radius: 8px 0px 0px 8px;
 }
+
+#searchRow{
+  display: flex;
+  align-items: center;
+}
+
+.shoppingIcon{
+  margin-left: 3vw;
+}
+
+#loginBtn{
+  border-radius: 5px;
+  margin-right: 0;
+  margin-left: 3vw;
+  
+}
+
+#modalLog{
+  margin-right: 0;
+  }
 
 #topNav {
   background-color: #045db6;
@@ -53,6 +77,7 @@
   text-align: left;
   display: flex;
   justify-content: left;
+  align-items: center;
   
 }
 
@@ -64,27 +89,6 @@
   right: auto;
 }
 
-.shoppingIcon {
-  /* display: flex;
-  align-items: center;
-  height: 100%; */
-  margin-top: 1vh;
-}
-
-#litzia {
-  font-size: 40px;
-}
-
-#litziaImage {
-  height: 6vh;
-  margin-top: 2vh!important;
-}
-
-#logoColumn {
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
-}
 
 #modal {
   margin-top: 1vh;
@@ -120,13 +124,13 @@
 #rightCol{
   padding: 0!important;
 }
-
+/* 
 #cartCol{
   display: flex;
   justify-content: left;
   padding: 0;
   max-width: 5vw;
-}
+} */
 
 #loginCol{
   /* display: flex;
@@ -141,27 +145,23 @@
   
 } */
 
-#modalLog{
-  margin-left: 0;
-  margin-top: 1vh;
-  /* margin-right: 2vw; */
-  /* margin-right: 2vw; */
-}
 
-#loginBtn{
-  border-radius: 5px;
-}
 
 
 @media only screen and (max-width: 600px) {
 
   #searchButton {
-    background-color: transparent;
-    border: none;
-    margin-top: 1vh;
-    margin-left: 0%;
-    color: rgb(145, 143, 143);
-    display: none;
+    background-color: rgb(51, 51, 51);
+  border: none;
+  /* margin-top: 0.1rem; */
+  height: 3.2rem;
+  /* margin-left: 55%; */
+  color: rgb(255, 255, 255);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+  border-radius: 0px 8px 8px 0px;
   }
   
   #search {
@@ -170,12 +170,13 @@
     width: 40vw;
   }
 
-  #nov-mobile{
-    width: 40% !important;
+  #nav-mobile{
+    
   }
 
   #searchCol{
-    width: 20%!important;
+    /* width: 20%!important; */
+    padding-right: 0!important;
   }
 
   #loginBtn {
@@ -183,6 +184,8 @@
    padding-left: none !important;
   }
 
+
+  
   
 
 
